--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -6,15 +6,15 @@ labels: [ bug ]
 body:
 - type: textarea
    
-    attributes:
+# attributes:
     label: Describe the bug
     description: A clear and concise description of what the bug is.
     placeholder: I found a bug that [...]
     validations:
     required: true
-  - type: textarea
+  # - type: textarea
     
-    attributes:
+   # attributes:
     label: To reproduce
     description: Steps to reproduce the behavior.
     placeholder: 
@@ -23,12 +23,12 @@ body:
     3. Scroll down to '...'
    validations:
    required: true
+  
   - type: textarea
-   
-    attributes:
+   # attributes:
     label: Expected behavior
     description: A clear and concise description of what you expected to happen.
-    placeholder: I expected that [...]
+   [                                                                                    ]
     validations:
     required: true
 
